Included my pathfinding package in project

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 
+Assets/3D_Astar_Pathfinding_Package/Runtime/NavAgent.cs.meta
+Assets/3D_Astar_Pathfinding_Package/Runtime/NavAgent.cs
